--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+.formulario {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+}
